trunk/Archive2/38/c78abd3f098143/output
main.cpp:14:17: error: invalid use of template-name 'A' without an argument list
     B& f1(const A& obj)
                 ^
main.cpp: In function 'int main()':
main.cpp:30:12: warning: unused variable 'b' [-Wunused-variable]
     B<int> b;
            ^
